Added  .env files and header scroll effect
- Added environments files and header scroll effect and classnames package
- fix variables  and some bugs and added lazy loading

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -44,7 +44,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="development">This version is in development</div>
     <div id="root"></div>
 
     <!-- Bootstrap v5.2.2 -->
